Claude: Step to rework optimisation framework
Signed-off-by: Conrad Hübler <Conrad.Huebler@gmx.net>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -214,6 +214,10 @@ set(curcuma_core_SRC
         src/capabilities/analysenciplot.cpp
         src/capabilities/curcumamethod.cpp
         src/capabilities/curcumaopt.cpp
+        # Modern optimizer system - Claude Generated (simplified)
+        src/capabilities/modern_optimizer_simple.cpp
+        # Native LBFGS optimizer - Claude Generated (disabled for now due to compilation issues)
+        # src/capabilities/native_lbfgs_optimizer.cpp
         src/capabilities/confscan.cpp
         src/capabilities/confsearch.cpp
         src/capabilities/confstat.cpp
