Fix scattering output file generation and implement unified analysis output architecture
- Fix critical bug in scattering_handler.cpp: Use scattering["q_values"] instead of scattering["q"]
- Implement new handler architecture with registry pattern for extensible analysis output
- Add GeneralPropertiesHandler for baseline CSV output (basename.general.csv)
- Refactor scattering output to new naming schema: basename.NNN.scattering.csv + basename.scattering_statistics.csv
- Enable always-write behavior: Output files generated regardless of console format
- Derive proper basenames from output_file parameter or input filename automatically
- Modernize AnalysisOutputDispatcher with plugin-based handler registration
- Add placeholder handlers for RDF and Topology output (future expansion)

This resolves the issue where scattering CSV files contained only headers but no data.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -236,6 +236,10 @@ set(curcuma_core_SRC
         src/capabilities/simplemd.cpp
         src/capabilities/analysis.cpp
         src/capabilities/analysis_output.cpp
+        src/capabilities/handlers/general_properties_handler.cpp
+        src/capabilities/handlers/scattering_handler.cpp
+        src/capabilities/handlers/rdf_handler.cpp
+        src/capabilities/handlers/topology_handler.cpp
         src/capabilities/trajectory_statistics.cpp
         src/capabilities/casino.cpp
         src/capabilities/scnp_parser.cpp
@@ -299,6 +303,10 @@ set(curcuma_cap_SRC
         src/capabilities/simplemd.cpp
         src/capabilities/analysis.cpp
         src/capabilities/analysis_output.cpp
+        src/capabilities/handlers/general_properties_handler.cpp
+        src/capabilities/handlers/scattering_handler.cpp
+        src/capabilities/handlers/rdf_handler.cpp
+        src/capabilities/handlers/topology_handler.cpp
         src/capabilities/trajectory_statistics.cpp
         src/capabilities/casino.cpp
         src/capabilities/scnp_parser.cpp
